--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Brothers and sisters -- Juvenile fiction'
 - !lcsh 'Bobbsey Twins (Fictitious characters) -- Juvenile fiction'
 - !lcc 'PZ'
+- GITenberg
 title: The Bobbsey Twins at Home
 url: http://www.gutenberg.org/ebooks/18420
